fix button gaps, fix clefselector position in landscape notes

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,9 @@
   }
 
   --button-padding: 0.7rem 1rem;
+
+  --gap-small: 1rem;
+  --gap-medium: 1.3rem;
 }
 
 /* reset */
