--- a/src/components/play/player/PlayControls.module.scss
+++ b/src/components/play/player/PlayControls.module.scss
@@ -1,6 +1,6 @@
 .controls {
   display: grid;
-  gap: 1rem 1.5rem;
+  gap: var(--gap-small);
 
   @media (pointer: fine) or (orientation: portrait) {
     // min-height: 8rem;
@@ -16,5 +16,7 @@
   @media (pointer: coarse) and (orientation: landscape) {
     margin-bottom: auto;
     width: 8rem;
+    gap: var(--gap-medium);
+    margin-left: 4vw;
   }
 }
